[tool.poetry]
name = "streamlit-reddit-clone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "streamlit_reddit_clone"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.26.0"
google-cloud-firestore = "^2.12.0"
toml = "^0.10.2"
google-auth-oauthlib = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
